# gdrive-explorer

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
config/: settings.yaml
src/gdrive_explorer/: auth.py  cache.py  calculator.py  cli.py  client.py  config.py  display.py  explorer.py  models.py  utils.py
tests/: README.md  conftest.py  test_basic.py  test_cache.py  test_calculator.py  test_integration.py  test_models.py
